--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <div class="grid-container">
         <header>
             <nav>
-                <img src="img/logo1.png" class="logobilde">
-                <a id="home-btn" href="index.html">Home</a>
-                <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
-                <a id="about-btn" href="about.html">About</a>
-                <a id="contact-btn" href="about.html">Contact</a>
+                <section id="logo-corner">
+                    <a href="index.html"><img src="img/logo1.png" class="logobilde" alt="company logo"></a>
+                </section>
+                <section id="menu-buttons">
+                    <a id="home-btn" href="index.html">Home</a>
+                    <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
+                    <a id="about-btn" href="about.html">About</a>
+                    <a id="contact-btn" href="about.html">Contact</a>
+                </section>
             </nav>
             <section id="headline">
                 <h1>Compelling headline</h1>
@@ -70,18 +74,18 @@
                 <h3>Sign up for our newsletter</h3>
                 <form>
                     <label for="newsletter-signup" class="hidden">Sign-up for email newsletter</label>
-                    <input type="text" id="newsletter-signup" placeholder="Nora@epost.no">
+                    <input type="text" id="newsletter-signup" placeholder="  Nora@epost.no">
                     <input id="sign-me-up-btn" type="submit" value="Sign me up!">
                 </form>
             </section>
             <section id="bottom-banner">
-                <img src="img/logo1.png" class="logobilde" href="index.html">
+                <a href="index.html"><img src="img/logo1.png" class="logobilde" alt="company logo"></a>
                 <h4>Company copyright 2023</h4>
-                <ul>
+                <section id="social-media-container">
                     <a class="social-media-icons" href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
                     <a class="social-media-icons" href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
                     <a class="social-media-icons" href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
-                </ul>
+                </section>
             </section>
         </footer>
     </div>
