--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,22 @@
     <div class="grid-container">
         <header>
             <nav>
-                <img src="img/logo1.png" class="logobilde" href="index.html">
-                <a id="home-btn" href="index.html">Home</a>
-                <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
-                <a id="about-btn" href="about.html">About</a>
-                <a id="contact-btn" href="about.html">Contact</a>
+                <section id="logo-corner">
+                    <a href="index.html"><img src="img/logo1.png" class="logobilde" alt="company logo"></a>
+                </section>
+                <section id="menu-buttons">
+                    <a id="home-btn" href="index.html">Home</a>
+                    <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
+                    <a id="about-btn" href="about.html">About</a>
+                    <a id="contact-btn" href="about.html">Contact</a>
+                </section>
             </nav>
             <section id="portfolio-heading">
                 <h1>Portfolio</h1>
             </section>
         </header>
 
-        <main>
+        <main id="portfolio-main">
             <section id="explore-previous-jobs-section">
                 <section id="explore-previous-jobs-h2">
                     <h2>Explore previous jobs</h2>
@@ -36,62 +40,64 @@
                     <li><a href="#development-section">Development</a></li>
                 </ul>
             </section>
-            <section id="branding-section">
-                <h2>Branding</h2>
-                <article>
-                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-                <article>
-                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-                <article>
-                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-                <article>
-                    <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-            </section>
-            <section id="design-section">
-                <h2>Design</h2>
-                <article>
-                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-                <article>
-                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-                <article>
-                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-            </section>
-            <section id="development-section">
-                <h2>Development</h2>
-                <article>
-                    <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
-                <article>
-                    <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                    <p>Et harum quidem</p>
-                </article>
+            <section id="jobs-section">
+                <section id="branding-section">
+                    <h2>Branding</h2>
+                    <article>
+                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                    <article>
+                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                    <article>
+                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                    <article>
+                        <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                </section>
+                <section id="design-section">
+                    <h2>Design</h2>
+                    <article>
+                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                    <article>
+                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                    <article>
+                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                </section>
+                <section id="development-section">
+                    <h2>Development</h2>
+                    <article>
+                        <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                    <article>
+                        <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                        <p>Et harum quidem</p>
+                    </article>
+                </section>
             </section>
         </main>
 
         <footer>
             <section id="bottom-banner">
-                <img src="img/logo1.png" class="logobilde" href="index.html">
+                <a href="index.html"><img src="img/logo1.png" class="logobilde" alt="company logo"></a>
                 <h4>Company copyright 2023</h4>
-                <ul>
+                <section id="social-media-container">
                     <a class="social-media-icons" href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
                     <a class="social-media-icons" href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
                     <a class="social-media-icons" href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
-                </ul>
+                </section>
             </section>
         </footer>
     </div>
