--- a/index.html
+++ b/index.html
@@ -40,32 +40,38 @@
                 <section>
                     <img src="https://placehold.co/400x400" alt="placeholder-image">
                 </section>
-                <h3>About Our Company</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
-                <a id="read-more-about-us-btn" href="about.html">Read more about us</a>
+                <section>
+                    <h3>About Our Company</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
+                    <a id="read-more-about-us-btn" href="about.html">Read more about us</a>
+                </section>
             </article>
             <section id="our-services">
-                <h3>Our services</h3>
-                <article id="branding">
-                    <i class="fa-sharp fa-solid fa-users"></i>
-                    <h4>Branding</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
-                <article id="design">
-                    <i class="fa-solid fa-cloud-arrow-up"></i>
-                    <h4>Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
-                <article id="development">
-                    <i class="fa-solid fa-code"></i>
-                    <h4>Development</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
-                <article id="support">
-                    <i class="fa-solid fa-wifi"></i>
-                    <h4>Support</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
+                <section>
+                    <h3>Our services</h3>
+                </section>
+                <section>
+                    <article id="branding">
+                        <i class="fa-sharp fa-solid fa-users"></i>
+                        <h4>Branding</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                    <article id="design">
+                        <i class="fa-solid fa-cloud-arrow-up"></i>
+                        <h4>Design</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                    <article id="development">
+                        <i class="fa-solid fa-code"></i>
+                        <h4>Development</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                    <article id="support">
+                        <i class="fa-solid fa-wifi"></i>
+                        <h4>Support</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                </section>
             </section>
         </main>
 
