--- a/about.html
+++ b/about.html
@@ -36,27 +36,31 @@
 
         <main>
             <section id="our-services-section">
-                <h1>Our services</h1>
-                <article class="branding-article">
-                    <i class="fa-sharp fa-solid fa-users"></i>
-                    <h3>Branding</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
-                <article class="branding-article">
-                    <i class="fa-solid fa-cloud-arrow-up"></i>
-                    <h3>Branding</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
-                <article class="branding-article">
-                    <i class="fa-solid fa-code"></i>
-                    <h3>Branding</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
-                <article class="branding-article">
-                    <i class="fa-solid fa-wifi"></i>
-                    <h3>Branding</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </article>
+                <section>
+                    <h2>Our services</h2>
+                </section>
+                <section>
+                    <article class="branding-article">
+                        <i class="fa-sharp fa-solid fa-users"></i>
+                        <h3>Branding</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                    <article class="branding-article">
+                        <i class="fa-solid fa-cloud-arrow-up"></i>
+                        <h3>Branding</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                    <article class="branding-article">
+                        <i class="fa-solid fa-code"></i>
+                        <h3>Branding</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                    <article class="branding-article">
+                        <i class="fa-solid fa-wifi"></i>
+                        <h3>Branding</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </article>
+                </section>
             </section>
             <section id="client-logos">
                 <h2>Some of our clients</h2>
@@ -69,35 +73,37 @@
                 </section>
             </section>
             <section id="contact-us-section">
-                <article>
-                    <h3>Contact us</h3>
-                    <h4>Send us a message</h4>
-                    <form>
-                        <p>Name</p>
-                        <label for="name-input" class="hidden">Name</label>
-                        <input type="text" id="name-input" placeholder="  Ola Nordmann...">
-                        <p>Subject</p>
-                        <label for="subject-input" class="hidden">Subject</label>
-                        <input type="text" id="subject-input" placeholder="  Branding...">
-                        <p>Message</p>
-                        <label for="message-input" class="hidden">Message</label>
-                        <input type="text" id="message-input">
-                        <input type="submit" id="send-message-btn" value="Send message">
-                    </form>
-                </article>
-                <article>
-                    <h4>Contact information</h4>
-                    <p>Donec orci lorem, aliquam sed justo id, ultrices dapibus sapien. In et porttitor erat. Suspendisse mattis fringilla nibh eget egestas. Donec pulvinar lorem lacus, ut fringilla sem pretium at. Proin tincidunt risus at fermentum scelerisque. Donec bibendum metus eget finibus tristique. Proin lacinia ligula cursus nunc tincidunt laoreet. </p>
-                    <section id="location">
-                        <i class="fa-solid fa-location-pin"></i> <p>B R A Veien 4, 1757 Halden</p>
-                    </section>
-                    <section id="phone">
-                        <i class="fa-solid fa-phone"></i> <p>69 60 80 00</p>
-                    </section>
-                    <section id="hiof-email">
-                        <i class="fa-solid fa-envelope"></i> <p>postmottak@hiof.no</p>
-                    </section>
-                </article>
+                <h3>Contact us</h3>
+                <section id="message-and-information">
+                    <article id="message-form">
+                        <h4>Send us a message</h4>
+                        <form>
+                            <p>Name</p>
+                            <label for="name-input" class="hidden">Name</label>
+                            <input type="text" id="name-input" placeholder="  Ola Nordmann...">
+                            <p>Subject</p>
+                            <label for="subject-input" class="hidden">Subject</label>
+                            <input type="text" id="subject-input" placeholder="  Branding...">
+                            <p>Message</p>
+                            <label for="message-input" class="hidden">Message</label>
+                            <input type="text" id="message-input">
+                            <input type="submit" id="send-message-btn" value="Send message">
+                        </form>
+                    </article>
+                    <article id="contact-information">
+                        <h4>Contact information</h4>
+                        <p>Donec orci lorem, aliquam sed justo id, ultrices dapibus sapien. In et porttitor erat. Suspendisse mattis fringilla nibh eget egestas. Donec pulvinar lorem lacus, ut fringilla sem pretium at. Proin tincidunt risus at fermentum scelerisque. Donec bibendum metus eget finibus tristique. Proin lacinia ligula cursus nunc tincidunt laoreet. </p>
+                        <section id="location">
+                            <i class="fa-solid fa-location-pin"></i> <p>B R A Veien 4, 1757 Halden</p>
+                        </section>
+                        <section id="phone">
+                            <i class="fa-solid fa-phone"></i> <p>69 60 80 00</p>
+                        </section>
+                        <section id="hiof-email">
+                            <i class="fa-solid fa-envelope"></i> <p>postmottak@hiof.no</p>
+                        </section>
+                    </article>
+                </section>
             </section>
         </main>
 
