--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link href="css/fontawesome/css/solid.css" rel="stylesheet">
 </head>
 
-<body>
+<body id="portfolio-body">
     <div class="grid-container">
         <header>
             <nav>
@@ -43,48 +43,56 @@
             <section id="jobs-section">
                 <section id="branding-section">
                     <h2>Branding</h2>
-                    <article>
-                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
-                    <article>
-                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
-                    <article>
-                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
-                    <article>
-                        <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
+                    <section class="small-img-row">
+                        <article>
+                            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                        <article>
+                            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                        <article>
+                            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                    </section>
+                    <section class="large-img-row">
+                        <article>
+                            <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                    </section>
                 </section>
                 <section id="design-section">
-                    <h2>Design</h2>
-                    <article>
-                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
-                    <article>
-                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
-                    <article>
-                        <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
+                        <h2>Design</h2>
+                    <section class="small-img-row">
+                        <article>
+                            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                        <article>
+                            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                        <article>
+                            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                    </section>
                 </section>
                 <section id="development-section">
-                    <h2>Development</h2>
-                    <article>
-                        <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
-                    <article>
-                        <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-                        <p>Et harum quidem</p>
-                    </article>
+                        <h2>Development</h2>
+                    <section class="large-img-2row">
+                        <article>
+                            <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                        <article>
+                            <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                            <p>Et harum quidem</p>
+                        </article>
+                    </section>
                 </section>
             </section>
         </main>
