--- a/about.html
+++ b/about.html
@@ -64,12 +64,14 @@
             </section>
             <section id="client-logos">
                 <h2>Some of our clients</h2>
-                <section id="client-logos1">
-                    <img src="img/logo1.png" alt="client logo">
-                    <img src="img/logo2.png" alt="client logo">
-                </section>
-                <section id="client-logos2">
-                    <img src="img/logo3.png" alt="client logo">
+                <section id="client-logo-container">
+                    <section id="client-logos1">
+                        <img src="img/logo1.png" alt="client logo">
+                        <img src="img/logo2.png" alt="client logo">
+                    </section>
+                    <section id="client-logos2">
+                        <img src="img/logo3.png" alt="client logo">
+                    </section>
                 </section>
             </section>
             <section id="contact-us-section">
